--- a/src/components/contents/activities/activities.module.css
+++ b/src/components/contents/activities/activities.module.css
@@ -9,7 +9,7 @@
 .banner{
   width: 100vw;
   height: 40%;
-  background: linear-gradient(278.67deg, rgba(111, 195, 223, 0.5096) 1.14%, rgba(111, 195, 223, 0.610748) 10.34%, rgba(111, 195, 223, 0.854886) 34.02%, rgba(111, 195, 223, 0.91) 49.61%);
+  background: linear-gradient(90deg, rgba(2,0,36,0.9) 0%, rgba(66,59,109,0.95) 30%, rgba(92,83,139,0.9) 41%, rgba(142,130,196,0.85) 82%, rgba(120,143,206,0.85) 100%);
 }
 .bannerTitle{
   position: absolute;
@@ -39,8 +39,9 @@
 }
 .bannerImg{
   position: relative;
-  width: 100vw;
-  top: 0;
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
   z-index: -999;
 }
 .content{
@@ -57,7 +58,7 @@
   height: 60vh;
 }
 .describe{
-  background-color: #061A4E;
+  background-color: #788fce;
   width: 60vw;
   display: flex;
   flex-direction: column;
