--- a/src/components/post/postAddForm/postAddForm.module.css
+++ b/src/components/post/postAddForm/postAddForm.module.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400;500;600&display=swap');
-
+.coor{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.6);
+}
 .wrapper{
   width: 100%;
   height: 100%;
@@ -68,6 +79,7 @@
   left: 50%;
   transform: translateX(-50%);
   font-size: 3em;
+  line-height: 1.5em;
   word-wrap: break-word;
   font-family: 'Roboto Mono', monospace;
 }
