--- a/src/components/post/postAddForm/postAddForm.module.css
+++ b/src/components/post/postAddForm/postAddForm.module.css
@@ -9,6 +9,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: #fff;
+  font-size: 2em;
   background: rgba(0, 0, 0, 0.6);
 }
 .wrapper{
