--- a/src/components/startBtn/startBtn.module.css
+++ b/src/components/startBtn/startBtn.module.css
@@ -29,3 +29,13 @@
   color: #5597e2;
   box-shadow: inset 0 0 0 2px #5597e2;
 }
+
+@media screen and (max-width : 640px){
+  .btn{
+    width: 80vw;
+  }
+  .arrow{
+    font-size: 1.5rem;
+    vertical-align: middle;
+  }
+}
