--- a/src/components/contents/channel/channel.module.css
+++ b/src/components/contents/channel/channel.module.css
@@ -142,3 +142,40 @@
   } 
   
 }
+@media screen and (max-width : 640px){
+  .bannerTitle{
+    top: 2%;
+  }
+  .banner{
+    height: 30%;
+  }
+  .content{
+    height: 70vh;
+  }
+  .bannerSubTxt{
+    font-size: 14px;
+    white-space: normal;
+    line-height: 20px;
+  }
+  .contentImg{
+    display: none;
+    visibility: hidden; 
+  }
+  .describe{
+    width: 100vw;
+  }
+  .first,.sec,.third, .fourth{
+    width: 100vw;
+    height: 14vh;
+}
+  .firstTitle,.secTitle,.thirdTitle, .fourthTitle{
+    height: 15%;
+    padding:0;
+    font-size: 1rem;
+  }
+  .firstDesc,.secDesc,.thirdDesc,.fourthDesc{
+    height: 10vh;
+    line-height: 15px;
+    padding: 0 0 0 10px;
+  }
+}
